{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 1041,
  "lineage": "0c9993dd-6923-13dc-daad-ec31d0b013f6",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0443a434a57db296a",
            "arn": "arn:aws:ec2:ap-northeast-2:992382518527:instance/i-0be7fe6d9017d8935",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be7fe6d9017d8935",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "0802",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03f533f1e0812806a",
            "private_dns": "ip-10-0-71-49.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.71.49",
            "public_ip": "3.36.112.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0381240ba90d8e854",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a46138a40a2658d",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aeec160edd1e1061"
            ]
          },
          "dependencies": [
            "module.public_subnet.aws_subnet.main",
            "module.sg_for_bastion.aws_security_group.sg_for_bastion",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eip[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-042eb015a65d49002",
            "domain": "vpc",
            "id": "eipalloc-042eb015a65d49002",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-15-165-165-167.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.165.167",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eip[1]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00265223504f312c6",
            "domain": "vpc",
            "id": "eipalloc-00265223504f312c6",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-124-79-16.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.79.16",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382518527:internet-gateway/igw-0811f0d6387f3a23c",
            "id": "igw-0811f0d6387f3a23c",
            "owner_id": "992382518527",
            "tags": {
              "Name": "yyk-igw"
            },
            "tags_all": {
              "Name": "yyk-igw"
            },
            "vpc_id": "vpc-044e6b562ec6ae519"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-042eb015a65d49002",
            "association_id": "eipassoc-0b4bf39046fb97327",
            "connectivity_type": "public",
            "id": "nat-0e130ed9fa9989d60",
            "network_interface_id": "eni-08bd92f81d1b4c59f",
            "private_ip": "10.0.74.152",
            "public_ip": "15.165.165.167",
            "subnet_id": "subnet-07a46138a40a2658d",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "module.eip.aws_eip.main",
            "module.public_subnet.aws_subnet.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat[1]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00265223504f312c6",
            "association_id": "eipassoc-038e6fc63383e5ded",
            "connectivity_type": "public",
            "id": "nat-07ad35cac6d6e4df2",
            "network_interface_id": "eni-0d10d4e4f24b1653f",
            "private_ip": "10.0.85.169",
            "public_ip": "13.124.79.16",
            "subnet_id": "subnet-09a7a4aba1c6233e3",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "module.eip.aws_eip.main",
            "module.public_subnet.aws_subnet.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382518527:subnet/subnet-0e534ed6339fa7865",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e534ed6339fa7865",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382518527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-northeast-2a-ec2",
              "Usage": "ec2"
            },
            "tags_all": {
              "Name": "ap-northeast-2a-ec2",
              "Usage": "ec2"
            },
            "vpc_id": "vpc-044e6b562ec6ae519"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382518527:subnet/subnet-0f46cfeda2c473b1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f46cfeda2c473b1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382518527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-northeast-2a-db",
              "Usage": "db"
            },
            "tags_all": {
              "Name": "ap-northeast-2a-db",
              "Usage": "db"
            },
            "vpc_id": "vpc-044e6b562ec6ae519"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet[2]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382518527:subnet/subnet-0efe1fd0d84ea13ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efe1fd0d84ea13ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382518527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-northeast-2c-ec2",
              "Usage": "ec2"
            },
            "tags_all": {
              "Name": "ap-northeast-2c-ec2",
              "Usage": "ec2"
            },
            "vpc_id": "vpc-044e6b562ec6ae519"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet[3]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382518527:subnet/subnet-07a8153d0559602c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a8153d0559602c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382518527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-northeast-2c-db",
              "Usage": "db"
            },
            "tags_all": {
              "Name": "ap-northeast-2c-db",
              "Usage": "db"
            },
            "vpc_id": "vpc-044e6b562ec6ae519"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382518527:subnet/subnet-07a46138a40a2658d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a46138a40a2658d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382518527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-northeast-2a-public",
              "Usage": "public"
            },
            "tags_all": {
              "Name": "ap-northeast-2a-public",
              "Usage": "public"
            },
            "vpc_id": "vpc-044e6b562ec6ae519"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382518527:subnet/subnet-09a7a4aba1c6233e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a7a4aba1c6233e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382518527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-northeast-2c-public",
              "Usage": "public"
            },
            "tags_all": {
              "Name": "ap-northeast-2c-public",
              "Usage": "public"
            },
            "vpc_id": "vpc-044e6b562ec6ae519"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "yyk-route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382518527:route-table/rtb-02bd94e2cd9df60f2",
            "id": "rtb-02bd94e2cd9df60f2",
            "owner_id": "992382518527",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0811f0d6387f3a23c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "yyk-route_table"
            },
            "tags_all": {
              "Name": "yyk-route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-044e6b562ec6ae519"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "yyk-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a676cab93b201f73",
            "route_table_id": "rtb-02bd94e2cd9df60f2",
            "subnet_id": "subnet-07a46138a40a2658d"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.public_subnet.aws_subnet.main",
            "module.route_table.aws_route_table.yyk-route_table",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "yyk-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046b741da82dbcab7",
            "route_table_id": "rtb-02bd94e2cd9df60f2",
            "subnet_id": "subnet-09a7a4aba1c6233e3"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.public_subnet.aws_subnet.main",
            "module.route_table.aws_route_table.yyk-route_table",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg_for_bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_for_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382518527:security-group/sg-0aeec160edd1e1061",
            "description": "Allow 22 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aeec160edd1e1061",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_for_bastion",
            "name_prefix": "",
            "owner_id": "992382518527",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_for_bastion"
            },
            "tags_all": {
              "Name": "sg_for_bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-044e6b562ec6ae519"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg_for_db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_for_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382518527:security-group/sg-01030fcf6da4cf561",
            "description": "Allow 3306 inbound traffic",
            "egress": [],
            "id": "sg-01030fcf6da4cf561",
            "ingress": [],
            "name": "sg_for_db",
            "name_prefix": "",
            "owner_id": "992382518527",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_for_db"
            },
            "tags_all": {
              "Name": "sg_for_db"
            },
            "timeouts": null,
            "vpc_id": "vpc-044e6b562ec6ae519"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg_for_db",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382518527:security-group-rule/sgr-0699dfb0dde2ff564",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0699dfb0dde2ff564",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01030fcf6da4cf561",
            "security_group_rule_id": "sgr-0699dfb0dde2ff564",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_for_db.aws_security_group.sg_for_db",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382518527:vpc/vpc-044e6b562ec6ae519",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05459be1b2bba2855",
            "default_route_table_id": "rtb-0fd518730589bc729",
            "default_security_group_id": "sg-050b0869536f3c94b",
            "dhcp_options_id": "dopt-0ae119d85fa1abf83",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-044e6b562ec6ae519",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fd518730589bc729",
            "owner_id": "992382518527",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}